--- a/css/screen.css
+++ b/css/screen.css
@@ -22,6 +22,10 @@
  */
 
 html {
+  height: 100%;
+}
+
+html {
   line-height: 1.15; /* 1 */
       -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
